--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@
 
 
 /* === Utility Classes === */
-@import 'utilities.css';
+/* @import 'utilities.css'; */
 
 /* --- Remove Platform Specific Styles from here --- */
 
